2022-10-29  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.c (pkl_ast_make_break_stmt): Remove.
	(pkl_ast_make_break_continue_stmt): Renamed from
	pkl_ast_make_continue_stmt.
	(pkl_ast_node_free_1): Adapt accordingly.
	(pkl_ast_print_1): Likewise.
	* libpoke/pkl-ast.h (enum pkl_ast_code): Rename
	PKL_AST_CONTINUE_STMT to PKL_AST_BREAK_CONTINUE_STMT.
	(enum pkl_ast_code): Remove PKL_AST_BREAK_STMT.
	(PKL_AST_CONTINUE_STMT_KIND): Define.
	(struct pkl_ast_break_continue_stmt): Renamed from
	pkL_ast_continue_stmt.
	(PKL_AST_BREAK_CONTINUE_STMT_BREAK): Define.
	(PKL_AST_BREAK_CONTINUE_STMT_CONTINUE): Likewise.
	* libpoke/pkl-tab.y: Adapt to the unified AST node.
	* libpoke/pkl-pass.c (pkl_do_pass_1): Likewise.
	* libpoke/pkl-anal.c: Likewise.
	* libpoke/pkl-trans.c: Likewise.
	* etc/poke.rec (unify `break' and `continue' in the same AST
	node): Removed as DONE.

2022-10-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-val.c (pvm_make_array_type): Fix assertion
	for `bounder' to check that if it is a closure.

2022-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk (_pk_bounder_unbounded): New function.
	* poke/poke.c (set_script_args): Install a proper bounder in array
	type.
	* libpoke/libpoke.h: Fix doc string of pk_make_array_type.

2022-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.std/std-test.pk: Fix with_temp_ios test for
	big-endian.

2022-10-28  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-diag.c (pkl_loc_to_source): Fix memory overrun.

2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm-val.c (pvm_make_array_type): Add an assertion
	for `bounder' to make sure it's not NULL.

2022-10-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* doc/poke.texi (Describe-Compute): Fix Packet struct to use
	constraint.
	(Commands and Dot-Commands): Use `expression` and `function`
	sub-cmd of `.vm disassemble`.
	(Poking a SBM Image): Fix typo.
	(Signed Weird Integers): Minor fix (s/byte/bit/).