@@ -1,3 +1,10 @@
+2022-10-30  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-tab.y: Make unary operators take precedence over AS
+	and ISA.
+	* testsuite/poke.pkl/cast-integers-19.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2022-10-29  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_ast_make_break_stmt): Remove.
